# cortex

./: .gitmodules  Cargo.toml  README.md
cortex-contracts/: .gitignore  foundry.toml  remappings.txt
cortex-contracts/script/: IsEvenDeploy.s.sol  config.toml
cortex-contracts/src/: IIsEven.sol  ImageID.sol  IsEven.sol
cortex-contracts/tests/: Elf.sol
cortex-server/: Cargo.toml
cortex-server/src/: main.rs
cortex-zk/: Cargo.toml  build.rs
cortex-zk/cortex-zk-iseven/: Cargo.toml
cortex-zk/cortex-zk-iseven/src/: main.rs
