[package]
name = "cortex-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
cortex-zk = { workspace = true }

alloy = { workspace = true }
alloy-primitives = { workspace = true }

risc0-zkvm = { workspace = true }

const-hex = { workspace = true }

tokio = { workspace = true}

color-eyre = { workspace = true }
thiserror = { workspace = true }